openshift-configs/applications/ui/service_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: <NAMESPACE>
  labels:
    app: ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: ui
    app.kubernetes.io/name: ui
    app.kubernetes.io/part-of: ui
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ui
    deployment: ui
  type: ClusterIP
