openshift-configs/applications/ui/route_config.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-ui
  namespace: <NAMESPACE>
  labels:
    app: ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: ui
    app.kubernetes.io/name: ui
    app.kubernetes.io/part-of: ui
spec:
  host: ui.voxxed-days.apps.ocp4-bm.redhat.arrowlabs.be
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: ui
